--- a/assets/styles/fonts.css
+++ b/assets/styles/fonts.css
@@ -1,4 +1,13 @@
 @font-face {
-    font-family: 'RobotoCondensed-Regular';
+    font-family: 'Roboto Condensed';
     src: url(../fonts/roboto-condensed/RobotoCondensed-Regular.ttf);
+}
+@font-face {
+    font-family: 'Roboto Condensed';
+    src: url(../fonts/roboto-condensed/RobotoCondensed-Bold.ttf);
+}
+
+@font-face {
+    font-family: 'Roboto Condensed';
+    src: url(../fonts/roboto-condensed/RobotoCondensed-BoldItalic.ttf);
 }
