--- a/assets/styles/footer.css
+++ b/assets/styles/footer.css
@@ -1,5 +1,10 @@
+.footer{
+    border-top: 3px solid black;
+    background-color: blueviolet;
+}
+
 .footer-container{
-    margin: 20px;
+  /* padding: 50px; */
 }
 
 .footer-header{
@@ -7,7 +12,7 @@
     justify-content: space-between;
     align-items: flex-end;
     border-bottom: 2px solid black;
-    padding: 10px;
+    /* padding: 10px; */
 }
 
 .social-network-logos{
@@ -19,16 +24,12 @@
     align-items: flex-end;    
 }
 
-.footer-lists{
-    display: flex;
-    justify-content: space-between;
-}
 .footer-list-1{
-    width:70%;    
+    width:100%;    
     background-color: coral;
 }
 .footer-list-2{
-    width:30%;    
+    width:100%;    
     background-color: lawngreen;
 }
 [class^="footer-list"]{
