Finished Newsweek and Subscribe

--- a/assets/styles/fonts.css
+++ b/assets/styles/fonts.css
@@ -1,4 +1,4 @@
-@font-face {
+/* @font-face {
     font-family: 'Roboto Condensed';
     src: url(../fonts/roboto-condensed/RobotoCondensed-Regular.ttf);
 }
@@ -10,4 +10,4 @@
 @font-face {
     font-family: 'Roboto Condensed';
     src: url(../fonts/roboto-condensed/RobotoCondensed-BoldItalic.ttf);
-}
+} */
