--- a/assets/styles/footer.css
+++ b/assets/styles/footer.css
@@ -8,20 +8,16 @@
 }
 
 .footer-header{
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-end;
+    /* display: flex;
+    justify-content: space-between; */
+    /* align-items: flex-end; */
     border-bottom: 2px solid black;
     /* padding: 10px; */
 }
-
-.social-network-logos{
-    height: 37px;
-}
-
 .credits{
-    display: flex;
-    align-items: flex-end;    
+    display: block;
+    /* display: flex; */
+    /* align-items: flex-end;     */
 }
 
 .footer-list-1{
