--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -135,3 +135,23 @@ main{
 .h-33{
     height: 33.33%;
 }
+
+@media(max-width: 992px){
+    .sm-sticky-top-remove{
+        position: static !important;
+    }
+}
+
+.pic-height{
+    height:75%;
+}
+
+@media(min-width: 768px){
+    .pic-height{
+        height:40%;
+    }
+}
+
+.red-text{
+    color: red;
+}
