--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -1,8 +1,6 @@
-html{
-}
+
 body{    
     max-width: 1325px; 
-    /* margin: 0 auto;  */
 }
 
 nav{
@@ -16,8 +14,6 @@ main{
     margin: 20px 20px 20px 20px;    
 }
 
-.main-column-1{
-}
 .main-column-2{
     height: max-content;
 }
@@ -142,4 +138,14 @@ main{
 
 .red-text{
     color: red;
+}
+
+.offset1{
+    position: relative;
+    top: 150px;
+    z-index: 9;
+}
+
+.z-index50{
+    z-index: 50;
 }
